# ffi-test

./: Cargo.toml  build.rs  lib.c
src/: ffi.rs  main.rs
